Working on removing additional library dependencies and using what is provided in Java 8.  Removed dependency on joda-time