@@ -1,27 +1,25 @@
 package uk.org.lidalia.slf4jtest;
 
-import java.io.PrintStream;
-import java.util.Collections;
-import java.util.Map;
+import static com.google.common.base.Preconditions.checkNotNull;
 
-import org.joda.time.Instant;
+import java.io.PrintStream;
+import java.time.Instant;
+import java.util.Collections;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.function.Function;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
 import org.slf4j.Marker;
 import org.slf4j.helpers.MessageFormatter;
-
-import com.google.common.base.Function;
-import com.google.common.base.Optional;
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableMap;
 
 import uk.org.lidalia.lang.Identity;
 import uk.org.lidalia.lang.RichObject;
 import uk.org.lidalia.slf4jext.Level;
 
-import static com.google.common.base.Optional.absent;
-import static com.google.common.base.Optional.fromNullable;
-import static com.google.common.base.Preconditions.checkNotNull;
-import static com.google.common.collect.FluentIterable.from;
-import static java.util.Arrays.asList;
+import com.google.common.collect.ImmutableMap;
 
 /**
  * Representation of a call to a logger for test assertion purposes.
@@ -246,27 +244,27 @@ public class LoggingEvent extends RichObject {
     }
 
     public LoggingEvent(final Level level, final String message, final Object... arguments) {
-        this(level, Collections.<String, String>emptyMap(), Optional.<Marker>absent(), Optional.<Throwable>absent(),
+        this(level, Collections.<String, String>emptyMap(), Optional.<Marker>empty(), Optional.<Throwable>empty(),
                 message, arguments);
     }
 
     public LoggingEvent(final Level level, final Throwable throwable, final String message, final Object... arguments) {
-        this(level, Collections.<String, String>emptyMap(), Optional.<Marker>absent(), fromNullable(throwable),
+        this(level, Collections.<String, String>emptyMap(), Optional.<Marker>empty(), Optional.ofNullable(throwable),
                 message, arguments);
     }
 
     public LoggingEvent(final Level level, final Marker marker, final String message, final Object... arguments) {
-        this(level, Collections.<String, String>emptyMap(), fromNullable(marker), Optional.<Throwable>absent(),
+        this(level, Collections.<String, String>emptyMap(), Optional.ofNullable(marker), Optional.<Throwable>empty(),
                 message, arguments);
     }
 
     public LoggingEvent(
             final Level level, final Marker marker, final Throwable throwable, final String message, final Object... arguments) {
-        this(level, Collections.<String, String>emptyMap(), fromNullable(marker), fromNullable(throwable), message, arguments);
+        this(level, Collections.<String, String>emptyMap(), Optional.ofNullable(marker), Optional.ofNullable(throwable), message, arguments);
     }
 
     public LoggingEvent(final Level level, final Map<String, String> mdc, final String message, final Object... arguments) {
-        this(level, mdc, Optional.<Marker>absent(), Optional.<Throwable>absent(), message, arguments);
+        this(level, mdc, Optional.<Marker>empty(), Optional.<Throwable>empty(), message, arguments);
     }
 
     public LoggingEvent(
@@ -275,7 +273,7 @@ public class LoggingEvent extends RichObject {
             final Throwable throwable,
             final String message,
             final Object... arguments) {
-        this(level, mdc, Optional.<Marker>absent(), fromNullable(throwable), message, arguments);
+        this(level, mdc, Optional.<Marker>empty(), Optional.ofNullable(throwable), message, arguments);
     }
 
     public LoggingEvent(
@@ -284,7 +282,7 @@ public class LoggingEvent extends RichObject {
             final Marker marker,
             final String message,
             final Object... arguments) {
-        this(level, mdc, fromNullable(marker), Optional.<Throwable>absent(), message, arguments);
+        this(level, mdc, Optional.ofNullable(marker), Optional.<Throwable>empty(), message, arguments);
     }
 
     public LoggingEvent(
@@ -294,7 +292,7 @@ public class LoggingEvent extends RichObject {
             final Throwable throwable,
             final String message,
             final Object... arguments) {
-        this(level, mdc, fromNullable(marker), fromNullable(throwable), message, arguments);
+        this(level, mdc, Optional.ofNullable(marker), Optional.ofNullable(throwable), message, arguments);
     }
 
     private LoggingEvent(
@@ -304,7 +302,7 @@ public class LoggingEvent extends RichObject {
             final Optional<Throwable> throwable,
             final String message,
             final Object... arguments) {
-        this(Optional.<TestLogger>absent(), level, mdc, marker, throwable, message, arguments);
+        this(Optional.<TestLogger>empty(), level, mdc, marker, throwable, message, arguments);
     }
 
     LoggingEvent(
@@ -322,14 +320,13 @@ public class LoggingEvent extends RichObject {
         this.marker = checkNotNull(marker);
         this.throwable = checkNotNull(throwable);
         this.message = checkNotNull(message);
-        this.arguments = from(asList(arguments)).transform(TO_NON_NULL_VALUE).toList();
+        this.arguments = Collections.unmodifiableList(
+                Stream.of(arguments).map(TO_NON_NULL_VALUE).collect(Collectors.toList()));
     }
 
-    private static final Function<Object, Object> TO_NON_NULL_VALUE = new Function<Object, Object>() {
-        @Override
-        public Object apply(final Object input) {
-            return fromNullable(input).or((Object) absent());
-        }
+    private static final Function<Object, Object> TO_NON_NULL_VALUE = (final Object input) ->
+    {
+            return Optional.ofNullable(input).orElse(Optional.<Object>empty());
     };
 
     @Identity private final Level level;
@@ -337,10 +334,10 @@ public class LoggingEvent extends RichObject {
     @Identity private final Optional<Marker> marker;
     @Identity private final Optional<Throwable> throwable;
     @Identity private final String message;
-    @Identity private final ImmutableList<Object> arguments;
+    @Identity private final List<Object> arguments;
 
     private final Optional<TestLogger> creatingLogger;
-    private final Instant timestamp = new Instant();
+    private final Instant timestamp = Instant.now();
     private final String threadName = Thread.currentThread().getName();
 
     public Level getLevel() {
@@ -359,7 +356,7 @@ public class LoggingEvent extends RichObject {
         return message;
     }
 
-    public ImmutableList<Object> getArguments() {
+    public List<Object> getArguments() {
         return arguments;
     }
 
@@ -392,16 +389,17 @@ public class LoggingEvent extends RichObject {
     void print() {
         final PrintStream output = printStreamForLevel();
         output.println(formatLogStatement());
-        throwable.transform(printThrowableTo(output));
+        
+        throwable.map(printThrowableTo(output));
+//        throwable.transform(printThrowableTo(output));
     }
 
-    private static Function<Throwable, String> printThrowableTo(final PrintStream output) {
-        return new Function<Throwable, String>() {
-            @Override
-            public String apply(final Throwable throwableToPrint) {
+    private static Function<Throwable, String> printThrowableTo(final PrintStream output) 
+    {
+        return (final Throwable throwableToPrint) -> 
+        {
                 throwableToPrint.printStackTrace(output);
                 return "";
-            }
         };
     }
 
@@ -410,14 +408,12 @@ public class LoggingEvent extends RichObject {
     }
 
     private String safeLoggerName() {
-        return creatingLogger.transform(toLoggerNameString).or("");
+        return creatingLogger.map(toLoggerNameString).orElse("");
     }
 
-    private static final Function<TestLogger, String> toLoggerNameString = new Function<TestLogger, String>() {
-        @Override
-        public String apply(final TestLogger logger) {
+    private static final Function<TestLogger, String> toLoggerNameString = (final TestLogger logger) -> 
+    {
             return " " + logger.getName();
-        }
     };
 
     private String getFormattedMessage() {
